--- a/Challenge04LGBB/View/Template.storyboard
+++ b/Challenge04LGBB/View/Template.storyboard
@@ -23,36 +23,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7ln-ka-WxD">
-                                <rect key="frame" x="16" y="110" width="358" height="523"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jix-3G-pJ2">
-                                        <rect key="frame" x="33" y="111" width="293" height="166"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mealmories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bi-AQ-e39">
-                                        <rect key="frame" x="33" y="19" width="293" height="52"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="32"/>
-                                        <color key="textColor" name="Mix_Magenta"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ViK-jH-EW8">
-                                        <rect key="frame" x="59" y="348" width="240" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" name="LabelMagenta"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="CornerRadius">
-                                        <integer key="value" value="20"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jas-Fp-geX">
-                                <rect key="frame" x="110" y="738" width="170" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jas-Fp-geX">
+                                <rect key="frame" x="110.66666666666669" y="746.66666666666663" width="169" height="43.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Compartilhar">
                                     <fontDescription key="titleFontDescription" name="Baloo2-SemiBold" family="Baloo 2" pointSize="25"/>
@@ -62,9 +34,67 @@
                                     <action selector="Share:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="dZv-9Y-1PF"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7ln-ka-WxD">
+                                <rect key="frame" x="20" y="123" width="350" height="457"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mealmories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bi-AQ-e39">
+                                        <rect key="frame" x="20" y="20.000000000000004" width="166" height="37.333333333333343"/>
+                                        <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="32"/>
+                                        <color key="textColor" name="Mix_Magenta"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jix-3G-pJ2">
+                                        <rect key="frame" x="10" y="111" width="330" height="326"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="reward.pipoca.2" translatesAutoresizingMaskIntoConstraints="NO" id="ViK-jH-EW8">
+                                        <rect key="frame" x="30" y="353" width="64" height="64"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="64" id="M6S-dO-OEa"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="g6C-Qh-UXF"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon sharing" translatesAutoresizingMaskIntoConstraints="NO" id="iPM-mr-IGO">
+                                        <rect key="frame" x="256" y="353" width="64" height="64"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="PlX-at-dhU"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="64" id="ZI8-7V-4er"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" name="LabelMagenta"/>
+                                <constraints>
+                                    <constraint firstItem="ViK-jH-EW8" firstAttribute="height" secondItem="Jix-3G-pJ2" secondAttribute="height" multiplier="0.196319" id="0M8-TG-B9X"/>
+                                    <constraint firstItem="Jix-3G-pJ2" firstAttribute="width" secondItem="7ln-ka-WxD" secondAttribute="width" multiplier="0.942857" id="5Br-Y1-3yw"/>
+                                    <constraint firstItem="ViK-jH-EW8" firstAttribute="width" secondItem="Jix-3G-pJ2" secondAttribute="width" multiplier="0.193939" id="9eL-0A-CEh"/>
+                                    <constraint firstItem="Jix-3G-pJ2" firstAttribute="bottom" secondItem="ViK-jH-EW8" secondAttribute="bottom" constant="20" id="9gU-jG-HzR"/>
+                                    <constraint firstItem="iPM-mr-IGO" firstAttribute="height" secondItem="Jix-3G-pJ2" secondAttribute="height" multiplier="0.196319" id="C1T-tt-uIx"/>
+                                    <constraint firstItem="Jix-3G-pJ2" firstAttribute="height" secondItem="7ln-ka-WxD" secondAttribute="height" multiplier="0.713348" id="ClY-bW-Wtc"/>
+                                    <constraint firstItem="5Bi-AQ-e39" firstAttribute="leading" secondItem="7ln-ka-WxD" secondAttribute="leading" constant="20" id="Hrx-Qy-nMr"/>
+                                    <constraint firstItem="Jix-3G-pJ2" firstAttribute="centerX" secondItem="7ln-ka-WxD" secondAttribute="centerX" id="Hzc-Rf-snD"/>
+                                    <constraint firstItem="5Bi-AQ-e39" firstAttribute="top" secondItem="7ln-ka-WxD" secondAttribute="top" constant="20" id="Sfj-Ew-0GX"/>
+                                    <constraint firstItem="Jix-3G-pJ2" firstAttribute="trailing" secondItem="iPM-mr-IGO" secondAttribute="trailing" constant="20" id="WYL-Lm-z9C"/>
+                                    <constraint firstAttribute="bottom" secondItem="Jix-3G-pJ2" secondAttribute="bottom" constant="20" id="WuB-ce-Glv"/>
+                                    <constraint firstItem="ViK-jH-EW8" firstAttribute="leading" secondItem="Jix-3G-pJ2" secondAttribute="leading" constant="20" id="ZqM-bD-Hjy"/>
+                                    <constraint firstItem="Jix-3G-pJ2" firstAttribute="bottom" secondItem="iPM-mr-IGO" secondAttribute="bottom" constant="20" id="e9p-nn-097"/>
+                                    <constraint firstItem="iPM-mr-IGO" firstAttribute="width" secondItem="Jix-3G-pJ2" secondAttribute="width" multiplier="0.193939" id="kTh-M6-7bs"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="CornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jas-Fp-geX" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="3tp-MI-WhN"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="7ln-ka-WxD" secondAttribute="trailing" constant="20" id="B4p-b9-CgB"/>
+                            <constraint firstAttribute="bottom" secondItem="7ln-ka-WxD" secondAttribute="bottom" constant="264" id="MSc-uV-rrb"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="jas-Fp-geX" secondAttribute="bottom" constant="20" id="Yx1-SF-Kh0"/>
+                            <constraint firstItem="7ln-ka-WxD" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="76" id="khg-Ni-olQ"/>
+                            <constraint firstItem="7ln-ka-WxD" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="xwM-8H-DlZ"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="Imagem" destination="Jix-3G-pJ2" id="i4u-vd-pdx"/>
@@ -78,6 +108,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icon sharing" width="1024" height="1024"/>
+        <image name="reward.pipoca.2" width="139.52999877929688" height="160"/>
         <namedColor name="LabelMagenta">
             <color red="0.99607843137254903" green="0.90588235294117647" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
